bind props data sider

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,3 +1,23 @@
-$primary-color:#396500;
-$secondary-color:  #151B22;
-$accent-color: #8DC63F;
+$pr:#323232; //primary
+$pr-drk:#0B0E12;
+$pr-lgt:#858688;
+$ace: #20A488; //accent
+$ace-drk: #128596;
+$ace-lgt: #54CCDF;
+$sd:  #234094; //secondary
+$sd-drk:  #132d79;
+$sd-lgt:  #3F5FBB;
+$blu:  #3498DB; //blue
+$blu-drk:  #2E88C5;
+$blu-lgt:  #48A2DE;
+$gre:  #7ECF42; //grey
+$gre-drk:  #71BA3B;
+$gre-lgt:  #8AD354;
+$yw:  #F1C40F; //yellow
+$yw-drk:  #D8B00D;
+$yw-lgt:  #F3CF3E;
+$rd:  #E74C3C; //red
+$rd-drk:  #CF4436;
+$org:  #EB6E19; //orange
+$pk:  #BF4B94; //pink
+$vio: #9B59B6
