--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $pr:#323232; //primary
 $pr-drk:#0B0E12;
 $pr-lgt:#858688;
-$ace: #20A488; //accent
+$ace: #20A4B8; //accent
 $ace-drk: #128596;
 $ace-lgt: #54CCDF;
 $sd:  #234094; //secondary
