change side css

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,23 +1,23 @@
 $pr:#323232; //primary
-$pr-drk:#0B0E12;
-$pr-lgt:#858688;
+$prDrk:#0B0E12;
+$prLgt:#858688;
 $ace: #20A4B8; //accent
-$ace-drk: #128596;
-$ace-lgt: #54CCDF;
+$aceDrk: #128596;
+$aceLgt: #54CCDF;
 $sd:  #234094; //secondary
-$sd-drk:  #132d79;
-$sd-lgt:  #3F5FBB;
+$sdDrk:  #132d79;
+$sdLgt:  #3F5FBB;
 $blu:  #3498DB; //blue
-$blu-drk:  #2E88C5;
-$blu-lgt:  #48A2DE;
+$bluDrk:  #2E88C5;
+$bluLgt:  #48A2DE;
 $gre:  #7ECF42; //grey
-$gre-drk:  #71BA3B;
-$gre-lgt:  #8AD354;
+$greDrk:  #71BA3B;
+$greLgt:  #8AD354;
 $yw:  #F1C40F; //yellow
-$yw-drk:  #D8B00D;
-$yw-lgt:  #F3CF3E;
+$ywDrk:  #D8B00D;
+$ywLgt:  #F3CF3E;
 $rd:  #E74C3C; //red
-$rd-drk:  #CF4436;
+$rdDrk:  #CF4436;
 $org:  #EB6E19; //orange
 $pk:  #BF4B94; //pink
 $vio: #9B59B6
